message-python/message-server-linux/compiling_error.txt
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp: In function ‘int main(int, char**)’:
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:26:37: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
         error("ERROR opening socket");
                                     ^
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:27:6: error: ‘bzero’ was not declared in this scope
      bzero((char *) &serv_addr, sizeof(serv_addr));
      ^~~~~
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:28:15: error: ‘atoi’ was not declared in this scope
      portno = atoi(argv[1]);
               ^~~~
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:28:15: note: suggested alternative: ‘auto’
      portno = atoi(argv[1]);
               ^~~~
               auto
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:34:39: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
               error("ERROR on binding");
                                       ^
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:37:64: error: invalid conversion from ‘int*’ to ‘socklen_t* {aka unsigned int*}’ [-fpermissive]
      newsockfd = accept(sockfd, (struct sockaddr *) &cli_addr, &clilen);
                                                                ^~~~~~~
In file included from /home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:5:0:
/usr/include/x86_64-linux-gnu/sys/socket.h:232:12: note:   initializing argument 3 of ‘int accept(int, sockaddr*, socklen_t*)’
 extern int accept (int __fd, __SOCKADDR_ARG __addr,
            ^~~~~~
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:39:34: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
           error("ERROR on accept");
                                  ^
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:41:10: error: ‘read’ was not declared in this scope
      n = read(newsockfd,buffer,255);
          ^~~~
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:41:10: note: suggested alternative: ‘fread’
      n = read(newsockfd,buffer,255);
          ^~~~
          fread
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:42:50: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
      if (n < 0) error("ERROR reading from socket");
                                                  ^
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:44:10: error: ‘write’ was not declared in this scope
      n = write(newsockfd,"I got your message",18);
          ^~~~~
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:44:10: note: suggested alternative: ‘fwrite’
      n = write(newsockfd,"I got your message",18);
          ^~~~~
          fwrite
/home/eden-tbcf/Repositories/us-bank-project/message-server-linux/message-server-linux.cpp:45:48: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
      if (n < 0) error("ERROR writing to socket");
                                                ^
